--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+indicator-session (0.1.4-0ubuntu2) karmic; urgency=low
+
+  * Add 01_polkit-1.patch: Port to polkit-1. (LP: #412601)
+  * Add 99_autoreconf.patch: Autoconf changes for above patch.
+  * debian/control: libpolkit-gnome-dev → libpolkit-gobject-1-dev
+
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 22 Sep 2009 09:17:43 +0200
+
 indicator-session (0.1.4-0ubuntu1) karmic; urgency=low
 
   * Upstream release (LP: #432120)
