--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+indicator-session (0.2.7-0ubuntu2) lucid; urgency=low
+
+  * debian/patches/restore_lock_screen.patch
+    - re-added patch that got dropped in the merge 
+
+ -- Ken VanDine <ken.vandine@canonical.com>  Thu, 25 Mar 2010 17:12:14 -0400
+
 indicator-session (0.2.7-0ubuntu1) lucid; urgency=low
 
   * debian/control
