debian/patches/use-xfce4-session-logout.patch: Use xfce4-session-logout to implement the logout action.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+indicator-session (0.2.10-0ubuntu1~ppa1) maverick; urgency=low
+
+  * debian/patches/use-xfce4-session-logout.patch: Use xfce4-session-logout to
+    implement the logout action.
+
+ -- Aurélien Gâteau <aurelien.gateau@canonical.com>  Fri, 17 Sep 2010 14:08:09 +0200
+
 indicator-session (0.2.10-0ubuntu1) maverick; urgency=low
 
   * New upstream release.
