--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+indicator-session (0.2.10-0ubuntu2watuppa1) maverick; urgency=low
+
+  * debian/control:
+    - Added missing dependency on xfce4-session (for xfce4-session-logout)
+    - Added missing dependency on xfce4-utils (for xflock4)
+  * debian/patches/use-xfce4-session-logout.patch: updated to use the "--fast"
+    switch (LP: #640636)
+
+ -- Olivier Tilloy <olivier.tilloy@canonical.com>  Mon, 20 Sep 2010 12:50:56 +0200
+
 indicator-session (0.2.10-0ubuntu2~ppa2) maverick; urgency=low
 
   * debian/patches/use-xflock4-to-lock.patch: Use xflock4 to implement the
