--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+indicator-session (12.10.5daily13.06.28-0ubuntu1) UNRELEASED; urgency=low
+
+  * Do the right thing and ask the user for permission if trying to shutdown
+    or reboot while other sessions are still logged in. (LP: #861171)
+
+ -- Mathieu Trudel-Lapierre <mathieu-tl@ubuntu.com>  Fri, 28 Jun 2013 11:37:10 -0400
+
 indicator-session (12.10.5daily13.06.19-0ubuntu1) saucy; urgency=low
 
   [ Mathieu Trudel-Lapierre ]
