--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+indicator-session (0.3.98-0ubuntu2) precise; urgency=low
+
+  *power-commands was added for actions in gtk-logout-helper.c 
+
+ -- root <root@evenodds>  Sun, 21 Dec 2014 16:40:33 -0300
+
 indicator-session (0.3.98-0ubuntu1) UNRELEASED; urgency=low
 
   * New upstream release.
