--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+indicator-session (17.3.20-0ubuntu1) UNRELEASED; urgency=medium
+
+  * Add phone indicator profiles.
+
+ -- Pete <pete.woods@canonical.com>  Mon, 20 Mar 2017 12:51:39 +0000
+
 indicator-session (12.10.5+17.04.20170314-0ubuntu1) zesty; urgency=medium
 
   * Switch to using cmake-extras macros instead of vendored ones
